modules/gdscript/tests/scripts/analyzer/errors/vararg_inherit_with_greater_min_argc.gd
class A:
	func f(x: int, ...args: Array) -> void:
		prints(x, args)

class B extends A:
	func f(x: int, y: int, ...args: Array) -> void:
		prints(x, y, args)

func test():
	pass
